<package>
  <name>shm_transport</name>
  <version>2.0.1</version>
  <description>The shared memory transport package</description>

   
  
  
  <maintainer email="dev@automodality.com">Dev OPS</maintainer>


  
  
  
  <license>BSD</license>


  
  
  
  <url type="website">http://wiki.ros.org/shm_transport</url>
  <url type="repository">https://github.com/AutoModality/shm_transport</url>


  
  
  
  
  <author email="dev@automodality.com">DEV Ops</author>
  <author email="jdamon@gmail.com">Jimi Damon</author>
  <author email="aroller@gmail.com">Aaron Roller</author>


  
  
  
  
  
  
  
  
  
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>roscpp</run_depend>
	<run_depend>cv_bridge</run_depend>

  
  <export>
    

  </export>
</package>